--- a/index.html
+++ b/index.html
@@ -379,7 +379,36 @@
 
       <div data-modal class="backdrop is-hidden">
 <div class="modal">
-  <button data-modal-close >Закрыть</button>
+  <button data-modal-close class="close">Закрыть</button>
+  <span class="modal-title">Оставьте свои данные, мы вам перезвоним</span>
+<form class="form">
+<div class="form-field">
+  <input type="text" class="form-input" name="name" id="name" placeholder=" ">
+<label for="name" class="form-label">Имя</label>
+</div>
+<div class="form-field">
+  <input type="number" class="form-input" name="name" id="phone" placeholder=" ">
+<label for="phone" class="form-label">Телефон</label>
+</div>
+<div class="form-field">
+  <input type="email" class="form-input" name="name" id="mail" placeholder=" ">
+<label for="mail" class="form-label">Почта</label>
+</div>
+<div class="form-field">
+  <textarea class="form-input"
+  name="comment"
+  rows="5"
+  cols="45"
+  placeholder="Оставьте комментарий"
+  id="comment"
+  placeholder=" "
+></textarea>
+<label for="comment">Комментарий</label>
+</div>
+<input type="checkbox" class="checkbox" name="privacy" id="privacy">
+<label for="privacy" class="checkbox-label">Соглашаюсь с рассылкой и принимаю <a class="checkbox-link" href="">Условия договора</a></label>
+<button class="button primary ">Отправить</button>
+</form>
 </div>
       </div>
     </main>
