--- a/index.html
+++ b/index.html
@@ -379,35 +379,56 @@
 
       <div data-modal class="backdrop is-hidden">
 <div class="modal">
-  <button data-modal-close class="close">Закрыть</button>
+  <a data-modal-close class="button-close" href="">
+    <svg class="icon-close" width="18" height="18">
+      <use href="./images/sprite.svg#icon-modal-close"></use> 
+    </svg>
+    </a>
   <span class="modal-title">Оставьте свои данные, мы вам перезвоним</span>
 <form class="form">
-<div class="form-field">
-  <input type="text" class="form-input" name="name" id="name" placeholder=" ">
-<label for="name" class="form-label">Имя</label>
-</div>
-<div class="form-field">
-  <input type="number" class="form-input" name="name" id="phone" placeholder=" ">
-<label for="phone" class="form-label">Телефон</label>
-</div>
-<div class="form-field">
-  <input type="email" class="form-input" name="name" id="mail" placeholder=" ">
-<label for="mail" class="form-label">Почта</label>
-</div>
-<div class="form-field">
-  <textarea class="form-input"
+<label class="form-field">
+  <input type="text" class="form-input" name="name" placeholder=" ">
+<span class="form-label">Имя</span>
+<span class="icon-modal">
+  <svg class="modal-svg" width="18" height="18">
+    <use href="./images/sprite.svg#icon-modal-name"></use> 
+  </svg>
+</span>
+</label>
+<label class="form-field">
+  <input type="tel" class="form-input" name="name" placeholder=" ">
+<span class="form-label">Телефон</span>
+<span class="icon-modal">
+  <svg class="modal-svg" width="18" height="18">
+    <use href="./images/sprite.svg#icon-modal-phone"></use> 
+  </svg>
+</span>
+</label>
+<label class="form-field">
+  <input type="email" class="form-input" name="name" placeholder=" ">
+<span class="form-label">Почта</span>
+<span class="icon-modal">
+  <svg class="modal-svg" width="18" height="18">
+    <use href="./images/sprite.svg#icon-modal-mail"></use> 
+  </svg>
+</span>
+</label>
+<label class="form-field">
+  <textarea class="comment-input"
   name="comment"
-  rows="5"
-  cols="45"
-  placeholder="Оставьте комментарий"
-  id="comment"
   placeholder=" "
 ></textarea>
-<label for="comment">Комментарий</label>
-</div>
-<input type="checkbox" class="checkbox" name="privacy" id="privacy">
-<label for="privacy" class="checkbox-label">Соглашаюсь с рассылкой и принимаю <a class="checkbox-link" href="">Условия договора</a></label>
-<button class="button primary ">Отправить</button>
+<span class="comment-label" >Комментарий</span>
+</label>
+<label class="checkbox-label">
+<input type="checkbox" class="checkbox" name="privacy">
+<span class="checkbox-icon"><svg class="checkbox-svg" width="16" height="15">
+  <use href="./images/sprite.svg#icon-modal-check"></use> 
+</svg></span>
+Соглашаюсь с рассылкой и принимаю 
+  <a class="checkbox-link" href=""> Условия договора</a></label>
+
+  <button class="button primary ">Отправить</button>
 </form>
 </div>
       </div>
