--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,7 @@
               <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="item">
-              <a
-                href="./portfolio.html"
-                class="link current"
-                aria-current="page"
-                >Портфолио
-              </a>
+              <a href="./portfolio.html" class="link current" aria-current="page">Портфолио </a>
             </li>
             <li class="item">
               <a href="" class="link">Контакты</a>
@@ -96,9 +91,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -117,9 +112,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -138,9 +133,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -159,9 +154,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -180,9 +175,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -201,9 +196,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -222,9 +217,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -243,9 +238,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -264,9 +259,9 @@
                     width="370"
                   />
                   <p class="description">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="subtitle-container">
@@ -295,9 +290,7 @@
                 </a>
               </li>
               <li class="address-item">
-                <a class="link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com
-                </a>
+                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com </a>
               </li>
               <li class="address-item">
                 <a class="link" href="tel:+380961111111">+38 096 111 11 11 </a>
@@ -340,14 +333,21 @@
         </div>
         <div class="container-form">
           <span class="footer-text"><b>Подпишитесь на рассылку</b></span>
-          <a class="button primary" href=""
-            >Подписаться
-            <svg class="subscribe-icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-subscribe"></use>
-            </svg>
-          </a>
+          <form class="footer-form">
+            <label class="footer-form-field">
+              <input type="email" class="footer-form-input" name="name" placeholder="Email" />
+              <!-- <span class="footer-form-label">Email</span> -->
+            </label>
+            <button class="button primary">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
