--- a/index.html
+++ b/index.html
@@ -379,14 +379,16 @@
 
       <div data-modal class="backdrop is-hidden">
 <div class="modal">
-  <a data-modal-close class="button-close" href="">
+  <button data-modal-close class="button-close" href="">
     <svg class="icon-close" width="18" height="18">
       <use href="./images/sprite.svg#icon-modal-close"></use> 
     </svg>
-    </a>
+    </button>
   <span class="modal-title">Оставьте свои данные, мы вам перезвоним</span>
 <form class="form">
-<label class="form-field">
+  <ul class="form-list">
+    <li class="form-item">
+      <label class="form-field">
   <input type="text" class="form-input" name="name" placeholder=" ">
 <span class="form-label">Имя</span>
 <span class="icon-modal">
@@ -395,7 +397,9 @@
   </svg>
 </span>
 </label>
-<label class="form-field">
+    </li>
+    <li class="form-item">
+      <label class="form-field">
   <input type="tel" class="form-input" name="name" placeholder=" ">
 <span class="form-label">Телефон</span>
 <span class="icon-modal">
@@ -404,7 +408,9 @@
   </svg>
 </span>
 </label>
-<label class="form-field">
+    </li>
+    <li class="form-item">
+      <label class="form-field">
   <input type="email" class="form-input" name="name" placeholder=" ">
 <span class="form-label">Почта</span>
 <span class="icon-modal">
@@ -413,13 +419,17 @@
   </svg>
 </span>
 </label>
-<label class="form-field">
+    </li>
+    <li class="form-item">
+      <label class="form-field">
   <textarea class="comment-input"
   name="comment"
   placeholder=" "
 ></textarea>
 <span class="comment-label" >Комментарий</span>
 </label>
+    </li>
+  </ul>
 <label class="checkbox-label">
 <input type="checkbox" class="checkbox" name="privacy">
 <span class="checkbox-icon"></span>
